--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "import-jsx": "^3.0.0",
     "ink": "^2.6.0",
-    "ink-multi-select": "^1.1.0",
+    "ink-multi-select": "https://github.com/ivanross/ink-multi-select.git#fix-managed-component",
     "nodegit": "^0.26.2",
     "react": "^16.12.0",
     "simple-git": "^1.126.0"
