--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "0.1.0",
   "description": "Interactive mode for git add",
   "author": "Ivan Rossi <ivanross.me@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ivanross/git-select-interactive.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ivanross/git-select-interactive/issues"
+  },
+  "homepage": "https://github.com/ivanross/git-select-interactive",
   "license": "MIT",
   "private": false,
   "bin": "cli.js",
