--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ink": "^2.6.0",
     "ink-multi-select": "https://github.com/ivanross/ink-multi-select.git#fix-managed-component",
     "log-symbols": "^3.0.0",
+    "meow": "^5.0.0",
     "react": "^16.12.0",
     "simple-git": "^1.126.0"
   },
@@ -48,6 +49,11 @@
           }
         }
       ]
+    ]
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "*.js"
     ]
   }
 }
