--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "homepage": "https://github.com/ivanross/git-select-interactive",
   "license": "MIT",
   "private": false,
-  "bin": "cli.js",
+  "bin": "./src/cli.js",
   "engines": {
     "node": ">=8"
   },
   "scripts": {
+    "build": "tsc",
+    "dev": "tsc --watch",
     "test": "jest"
   },
   "dependencies": {
@@ -35,8 +37,11 @@
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
+    "@types/react": "^16.9.19",
     "ink-testing-library": "^1.0.2",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "tsc": "^1.20150623.0",
+    "typescript": "^3.7.5"
   },
   "babel": {
     "presets": [
