--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
   "homepage": "https://github.com/ivanross/git-select-interactive",
   "license": "MIT",
   "private": false,
-  "bin": "./src/cli.js",
+  "bin": "./build/cli.js",
+  "files": [
+    "build"
+  ],
   "engines": {
     "node": ">=8"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "rm -rf build && tsc && chmod +x build/cli.js",
     "dev": "tsc --watch",
     "test": "jest"
   },
   "dependencies": {
     "figures": "^3.1.0",
-    "import-jsx": "^3.0.0",
     "ink": "^2.6.0",
     "ink-multi-select": "https://github.com/ivanross/ink-multi-select.git#fix-managed-component",
     "log-symbols": "^3.0.0",
@@ -33,32 +35,12 @@
     "simple-git": "^1.126.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.4",
-    "@babel/core": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "@babel/preset-react": "^7.7.4",
+    "@types/meow": "^5.0.0",
+    "@types/node": "^13.7.0",
     "@types/react": "^16.9.19",
     "ink-testing-library": "^1.0.2",
     "jest": "^24.9.0",
     "tsc": "^1.20150623.0",
     "typescript": "^3.7.5"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-react",
-      [
-        "@babel/preset-env",
-        {
-          "targets": {
-            "node": true
-          }
-        }
-      ]
-    ]
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "*.js"
-    ]
   }
 }
