--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,14 @@
     "target": "es5",
     "module": "commonjs",
     "lib": ["es6", "es2015", "dom"],
+    "types": ["node"],
     "declaration": true,
     "outDir": "build",
-    "strict": true,
+    "strictNullChecks": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "allowJs": true,
+    "jsx": "react"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.test.ts"]
