--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "scripts": {
     "build": "rm -rf build && tsc && chmod +x build/cli.js",
     "dev": "tsc --watch",
-    "test": "jest"
+    "test": "jest",
+    "release": "np",
+    "prerelease": "yarn build"
   },
   "dependencies": {
     "figures": "^3.1.0",
@@ -40,6 +42,7 @@
     "@types/react": "^16.9.19",
     "ink-testing-library": "^1.0.2",
     "jest": "^24.9.0",
+    "np": "^5.2.1",
     "tsc": "^1.20150623.0",
     "typescript": "^3.7.5"
   }
