--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "build": "rm -rf build && tsc && chmod +x build/cli.js",
     "dev": "tsc --watch",
-    "test": "echo \"no test\"",
+    "test": "jest",
     "release": "np",
     "prerelease": "yarn build"
   },
@@ -37,13 +37,19 @@
     "simple-git": "^1.126.0"
   },
   "devDependencies": {
+    "@types/jest": "^25.1.1",
     "@types/meow": "^5.0.0",
     "@types/node": "^13.7.0",
     "@types/react": "^16.9.19",
     "ink-testing-library": "^1.0.2",
-    "jest": "^24.9.0",
+    "jest": "^25.1.0",
     "np": "^5.2.1",
+    "ts-jest": "^25.1.0",
     "tsc": "^1.20150623.0",
     "typescript": "^3.7.5"
+  },
+  "jest": {
+    "roots": ["<rootDir>/test"],
+    "preset": "ts-jest"
   }
 }
