--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "types": ["node", "jest"],
     "declaration": true,
     "outDir": "build",
-    "strictNullChecks": true,
+    "strictNullChecks": false,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "allowJs": true,
