--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,10 @@
     "module": "commonjs",
     "lib": ["es6", "es2015", "dom"],
     "types": ["node", "jest"],
-    "declaration": true,
+    "declaration": false,
     "outDir": "build",
-    "strictNullChecks": false,
+    "strictNullChecks": true,
+    "noImplicitAny": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "allowJs": true,
