--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [8.x, 10.x, 12.x]
+        node-version: [8.x, 10.x, 12.x, 13.x]
 
     steps:
       - uses: actions/checkout@v1
@@ -20,5 +20,6 @@ jobs:
         run: |
           npm install
           npm test
+          git-select-interactive -v
         env:
           CI: true
