--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "figures": "^3.1.0",
     "ink": "^2.6.0",
     "ink-multi-select": "https://github.com/ivanross/ink-multi-select.git#fix-managed-component",
+    "ink-text-input": "^3.2.2",
     "log-symbols": "^3.0.0",
     "meow": "^5.0.0",
     "react": "^16.12.0",
