--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build": "rm -rf build && tsc && chmod +x build/cli.js",
     "dev": "tsc --watch",
     "test": "jest",
-    "release": "np",
+    "release": "np --no-2fa",
     "prerelease": "yarn build"
   },
   "dependencies": {
@@ -45,7 +45,7 @@
     "@types/react": "^16.9.34",
     "ink-testing-library": "^1.0.2",
     "jest": "^25.4.0",
-    "np": "^6.2.2",
+    "np": "pixelastic/np#feat/no-2fa",
     "ts-jest": "^25.4.0",
     "typescript": "^3.8.3"
   },
