--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
   "bin": "./build/cli.js",
   "files": [
     "build",
-    "docs"
+    "docs",
+    "man"
+  ],
+  "man": [
+    "./man/git-select-interactive.1"
   ],
   "engines": {
     "node": ">=8"
@@ -26,7 +30,8 @@
     "dev": "tsc --watch",
     "test": "jest",
     "release": "np --no-2fa",
-    "prerelease": "yarn build"
+    "prerelease": "yarn build && yarn man",
+    "man": "marked-man ./man/man.md > ./man/git-select-interactive.1"
   },
   "dependencies": {
     "figures": "^3.2.0",
@@ -45,6 +50,8 @@
     "@types/react": "^16.9.34",
     "ink-testing-library": "^1.0.2",
     "jest": "^25.4.0",
+    "marked": "^0.7.0",
+    "marked-man": "^0.7.0",
     "np": "pixelastic/np#feat/no-2fa",
     "ts-jest": "^25.4.0",
     "typescript": "^3.8.3"
