--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "git-select-interactive",
-  "version": "0.3.2",
+  "version": "0.3.3-alpha.0",
   "description": "Interactive mode for git add",
   "author": "Ivan Rossi <ivanross.me@gmail.com>",
   "repository": {
