--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "simple-git": "^1.132.0"
   },
   "devDependencies": {
+    "@types/concat-stream": "^1.6.0",
     "@types/jest": "^25.2.1",
     "@types/meow": "^5.0.0",
     "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
+    "concat-stream": "^2.0.0",
     "ink-testing-library": "^1.0.2",
     "jest": "^25.4.0",
     "marked": "^0.7.0",
