--- a/package.json
+++ b/package.json
@@ -44,17 +44,17 @@
     "simple-git": "^1.132.0"
   },
   "devDependencies": {
-    "@types/concat-stream": "^1.6.0",
     "@types/jest": "^25.2.1",
     "@types/meow": "^5.0.0",
     "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
-    "concat-stream": "^2.0.0",
     "ink-testing-library": "^1.0.2",
     "jest": "^25.4.0",
     "marked": "^0.7.0",
     "marked-man": "^0.7.0",
+    "node-pty": "^0.9.0",
     "np": "pixelastic/np#feat/no-2fa",
+    "prettier": "^2.0.5",
     "ts-jest": "^25.4.0",
     "typescript": "^3.8.3"
   },
